Fix some scrolling issues on mobile.
- Panel content wrapper with overflow:none was preventing DirectoryTree scroll.
- Remove content wrapper; not sure what it was solving.
Perhaps at one point it helped when collapse state was handled differently.

--- a/frontend/src/components/DirectoryTree.module.css
+++ b/frontend/src/components/DirectoryTree.module.css
@@ -19,6 +19,8 @@
     height: 30px;
     min-width: 250px;
     border-radius: 5px;
+    /* setting font-size to minimum of 16px prevents zoom on input focus on iOS */
+    font-size: 16px;
 }
 
 .buttons {
