--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,6 +34,7 @@ body,
 #root {
     min-height: 100vh;
     min-height: -webkit-fill-available;
+    overflow: hidden;
 }
 
 body {
